--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "react": "^17.0.2",
+    "react-crypto-compare": "^1.3.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
